# NetTopoView

./: README.md  demo.html  demo.json  demo.py  pyproject.toml
metadata/device_A/: get_facts.json  get_lldp_neighbors.json
metadata/device_B/: get_facts.json  get_lldp_neighbors.json
metadata/device_C/: get_facts.json  get_lldp_neighbors.json
metadata/device_D/: get_facts.json  get_lldp_neighbors.json
