[tool.poetry]
name = "nettopoview"
version = "0.1.0"
description = "Generate network L2 topology in html"
authors = ["Xian Wu <xianwuusa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
